pkgs/drbd9/drbd/.compat_test.6.1.26/have_blk_queue_split_bio.stderr
<command-line>: warning: "KBUILD_MODNAME" redefined
<command-line>: note: this is the location of the previous definition
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/have_blk_queue_split_bio.c: In function ‘dummy’:
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/have_blk_queue_split_bio.c:8:9: error: implicit declaration of function ‘blk_queue_split’; did you mean ‘blk_queue_exit’? [-Werror=implicit-function-declaration]
    8 |         blk_queue_split(&bio);
      |         ^~~~~~~~~~~~~~~
      |         blk_queue_exit
cc1: some warnings being treated as errors
